# devops-autopilot

./: .gitignore  CONTRIBUTING.md  README.md  main.py  main_demo.py  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  run_demo.py
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/dockerfiles/: Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: __init__.py
backend/core/: __init__.py  config.py  database.py  influxdb.py  settings.py
backend/models/: __init__.py  base.py  config.py  health.py  logs.py  runs.py
backend/services/: __init__.py  health.py  health_demo.py  logs.py  runs.py
backend/services/llm/: provider.py
config/: config.yaml
docs/stories/: fastapi-bootstrap-story.md
routers/: __init__.py  bamboo.py  config.py  health.py  health_demo.py  llm.py  reports.py
tests/: conftest.py  test_database.py  test_localai_provider.py  test_models.py  test_services.py  test_settings.py
