[tool.poetry]
name = "devops-autopilot"
version = "1.0.0"
description = "A Python 3.13 FastAPI application for automated DevOps operations with PostgreSQL and InfluxDB integration"
authors = ["Jeroen Verhoeven <jeroen@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "backend"}, {include = "routers"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.115.5"
uvicorn = {extras = ["standard"], version = "0.34.0"}
python-multipart = "0.0.12"
sqlalchemy = "2.0.36"
asyncpg = "0.30.0"
alembic = "1.14.0"
influxdb-client = "1.47.0"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
PyYAML = "6.0.2"
httpx = "0.28.1"
aiohttp = "3.11.10"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
structlog = "25.4.0"
prometheus-client = "0.21.0"
python-dateutil = "2.9.0.post0"
click = "8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.24.0"
pytest-cov = "6.0.0"
black = "24.10.0"
isort = "5.13.2"
flake8 = "7.1.1"
mypy = "1.13.0"

[tool.poetry.group.minimal]
optional = true

[tool.poetry.group.minimal.dependencies]
# Minimal set for demo mode without heavy database drivers
fastapi = "0.115.5"
uvicorn = {extras = ["standard"], version = "0.34.0"}
python-multipart = "0.0.12"
sqlalchemy = "2.0.36"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
PyYAML = "6.0.2"
httpx = "0.28.1"
python-dateutil = "2.9.0.post0"
click = "8.1.8"

[tool.poetry.scripts]
demo = "run_demo:main"
dev = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    '__pycache__',
    '.venv',
    'venv',
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
asyncio_mode = "auto"